# customer_segmentation

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  bentofile.yaml  main-deployment.yaml  pyproject.toml
.dvc/: config
config/: config.yaml  main.yaml
last_step/src/: helper.py  main.py  process_data.py  segment.py
notebook/: analyze_data.ipynb  full_code.ipynb  notebook1.ipynb  notebook2.ipynb
processors/: PCA.pkl  scaler.pkl
src/: bentoml_app.py  bentoml_app_pandas.py  helper.py  main.py  predict.py  process_data.py  run_notebook.py  segment.py  streamlit_app.py
src/step1/: README.md  process_data.py  segment.py
step0/: README.md
step1/: README.md  image.dvc
step1/src/: process_data.py  segment.py
step1/tests/: test_process_data.py
step2/: README.md  image.dvc
step2/config/: main.yaml
step2/src/: helper.py  print_config.py  process_data.py  segment.py
step2/tests/: test_process_data.py
step3/: README.md  data.dvc  image.dvc
step3/config/: main.yaml
step3/src/: helper.py  process_data.py  segment.py
step4/: README.md  data.dvc
step4/src/: process_data.py  segment.py
step5/: README.md
step5/config/: main.yaml
step5/src/: main.py  predict.py  process_data.py  segment.py
step6/: README.md  data.dvc
step6/config/: main.yaml
step6/notebook/: analyze_data.ipynb
step6/src/: main.py  predict.py  segment.py
step6/tests/: test_process_data.py
